# MineC

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE
client/: CMakeLists.txt  Cerialize_resources.py  cerialize.py  pixelfont_generator.py  pixelfont_spec.md
client/MineC_Client_data/: active_resourcepacks.txt  general_settings.yaml  inactive_resourcepacks.txt  languages.txt  video_settings.yaml
client/MineC_Client_data/resourcepacks/development_pack/: info.yaml
client/assets/: index.txt
client/assets/fonts/: font0.pixelfont
client/assets/minec/shaders/: basic.frag  menu_gl.vert  pixelchar_vk.frag
client/assets/shaders/: menu_gl.frag  pixelchar_vk.vert.spv
client/old_stuff/: basic.frag.spv  basic.vert.spv
client/old_stuff/scripts/pixelfont_creator/: bitmap_converter.py  debug.pixelfont
client/pixelfonts/classic/: pixelfont_config.yaml
client/pixelfonts/debug_font/: debug.pixelfont
client/resourcepacks/MineCdefault/textures/: resourcelayout.yaml
client/resources/assets/: fonts.txt  index.txt  textures.txt
client/resources/assets/fonts/: font1.pixelfont
client/resources/assets/minec/: debug.pixelfont
client/resources/assets/samplers/: smooth_sampler.yaml
client/resources/assets/shaders/: pixelchar_gl.vert
client/resources/shaders/: pixelchar_gl.frag
client/resources/shaders/gui_text/: gui_text_gl.frag  gui_text_gl.vert
client/runtime_files/: game_settings.yaml  video_settings.yaml  vulkan_settings.yaml
client/runtime_files/assets/MineCdefault/: fonts.yaml  info.yaml  languages.yaml  shaders.yaml  textures.yaml
client/runtime_files/assets/MineCdefault/fonts/: smooth.pixelfont
client/runtime_files/assets/MineCdefault/languages/: english.yaml  german.yaml
client/runtime_files/assets/MineCdefault/shaders/: pixelchar_gl.vert
client/scripts/binary_to_c_array_converter/: pixelchar.vert.spv
client/scripts/pixelfont_creator/: pixelfont_converter.py
client/src/: logging.c  logging.h  main.c  minec_client.c  minec_client.h  resource_index.c  resource_index.h
client/src/_gui/: gui_menus.c  gui_menus.h
client/src/_renderer/: renderer.c  renderer.h  rendering_thread.c
client/src/_renderer/backend/: backend.c  backend.h
client/src/_renderer/backend/_vulkan/: vulkan_backend.c  vulkan_backend.h  vulkan_device_resources.c  vulkan_device_resources_rectangles.c  vulkan_device_swapchain_and_framebuffers.c
client/src/_renderer/backend/opengl/: backend_opengl.h  base.c  device.c  device_framebuffers.c  pipelines_resources.c  render.c
client/src/_renderer/backend/vulkan/: base.c  (+3 more)
client/src/application/: application.c  application_window.h
client/src/application_window/: application_window.c  application_window.h
client/src/asset_loader/: asset_loader.c  asset_loader.h
client/src/gui/: gui.c  gui.h  gui_menus.c  gui_menus.h  menu_gui.c  pixelfont.c
client/src/networker/: networker.c  networker.h
client/src/renderer/: _renderer.c  _renderer.h  backend.c  backend.h  components.c  components.h  frontend.c  frontend.h  gui_text.c  menu.c  menu_gui.c  pixelchar.c  pixelfont.c  renderer.c  renderer.h  renderer_internal.c  renderer_internal.h  rendering_thread.c  texture_manager.c
client/src/renderer/backend/: _renderer_backend.c  _renderer_backend.h  backend.c  backend.h  backend_internal.h  renderer_backend.h
client/src/resource_loader/: resource_loader.c  resource_loader.h
client/src/resource_manager/: resource_manager.h
client/src/resources/: resources.c  resources.h  resources_defines.h  resources_internal.h
client/src/settings/: settings.c  settings.h  settings_defines.h
client/src/simulator/: simulator.c  simulator.h
client/src/string_index/: english.c  german.c  string_index.c  string_index.h
shared/cwindow/: CMakeLists.txt
shared/cwindow/include/cwindow/: cwindow.h
shared/cwindow/src/: cwindow_impl_windows.c  cwindow_impl_x11.c
shared/pixelchar/: CMakeLists.txt  pixelfont_generator.py  pixelfont_spec.md  shader_headers_generator.py
shared/pixelchar/include/pixelchar/: backend_directx.h  backend_opengl.h  backend_vulkan.h  pixelchar.h
shared/pixelchar/pixelfonts/debug_font/: debug.pixelfont  pixelfont_config.yaml
shared/pixelchar/shaders/: pixelchar_gl.frag  pixelchar_gl.vert  pixelchar_vk.frag  pixelchar_vk.frag.spv  pixelchar_vk.vert  pixelchar_vk.vert.spv
shared/pixelchar/src/: pixelchar.c  pixelchar_font.c  pixelchar_font.h  pixelchar_internal.h  pixelchar_renderer.c  pixelchar_renderer.h  pixelchar_renderer_max_pixelfonts.h
shared/pixelchar/src/backend/: backend.h  backend_direct3d11.cpp  backend_direct3d12.cpp  backend_opengl.c  backend_vulkan.c  opengl_fragment_shader.h  opengl_vertex_shader.h  pixelchar_backend.h  vulkan_vertex_shader.h
shared/pixelchar/src/impl/: impl_direct3d12.c  impl_opengl.c  impl_vulkan.c  renderer_direct3d11.cpp  vulkan_fragment_shader.h
shared/pixelchar/src/renderers/: renderer_opengl.c  renderer_vulkan.c
shared/pixelchar/tests/: test_pixelchar.c  test_pixelchar_opengl.c  test_pixelchar_vulkan.c
shared/utility/: CMakeLists.txt
shared/utility/include/: array_list.h  arraylist.h  atomics.h  cerialize.h  hashmap.h  mutex.h  rng.h  string_allocator.h  stringutils.h  utils.h
shared/utility/src/: array_list.c  arraylist.c  atomics.c  cerialize.c  hashmap.c  string_allocator.c  stringutils.c  utils.c  utils_linux.c  utils_windows.c
shared/window/: CMakeLists.txt
shared/window/include/window/: window.h
shared/window/src/: wgl.h  window.c  window_windows.c  window_x11.c
src/general/pixelchar/: CMakeLists.txt  pixelchar.c  pixelchar.h  pixelchar_vertex_shader.h
src/general/pixelchar/src/: pixelchar.c  pixelchar.h  pixelchar_font.c  pixelchar_font.h  pixelchar_internal.h  pixelchar_renderer.c  pixelchar_renderer.h  pixelchar_renderer_max_pixelfonts.h  pixelfont.c  pixelfont.h
testing/: CMakeLists.txt  cerialize_test.c  direct3d12_testing.c  direct3d12_testing.cpp  general_testing.c  old_to_new_pixelfont.c  pixelchar_test_opengl.c  pixelchar_test_vulkan.c
testing/test/: main.c  testing.c  testing.h
testing/test2/: main.c
testing/test3/: main.cpp
(+400 files in other folders)
